--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "pokeapi-js-wrapper": "^1.1.2",
     "pretty-checkbox": "^3.0.3",
     "uikit": "^3.4.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
