--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "pokedex",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,5 @@
     "pretty-checkbox": "^3.0.3",
     "uikit": "^3.4.1"
   },
-  "devDependencies": {
-    "gh-pages": "^2.2.0"
-  }
+  "devDependencies": {}
 }
